[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jarvis-trading"
version = "1.0.0"
description = "Multi-journey reinforcement learning trading system with FinRL-inspired architecture"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Developer", email = "dev@example.com"}
]
keywords = ["trading", "reinforcement-learning", "finrl", "cryptocurrency"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
    "ta>=0.11.0",
    "binance-connector>=3.5.0",
    "ccxt>=4.0.0",
    "yfinance>=0.2.30",
    "torch>=2.1.0",
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.2.0",
    "sb3-contrib>=2.2.0",
    "mlflow>=2.10.0",
    "wandb>=0.16.0",
    "optuna>=3.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "isort>=5.13.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"
